--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>🍪 Cookie Clicker 🍪</h1>
     <div class="game">
-        <img src="https://i.imgur.com/3aX9zCL.png" alt="Cookie" id="cookie">
+        <img src="Cookie.png" alt="Cookie" id="cookie">
         <p>Cookies: <span id="cookieCount">0</span></p>
 
         <div class="shop">
